# pitza-backend

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  diesel.toml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
migrations/2025-05-28-204611_create_users/: down.sql  up.sql
migrations/2025-05-28-204612_create_products/: down.sql  up.sql
migrations/2025-05-28-204613_create_favorites/: down.sql  up.sql
migrations/2025-05-28-204614_create_orders/: down.sql  up.sql
migrations/2025-05-28-204615_create_order_items/: down.sql  up.sql
migrations/2025-05-28-204616_create_reviews/: down.sql  up.sql
migrations/2025-05-28-204617_create_complaints/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/handlers/: auth.rs
src/handlers/admin/: orders.rs  products.rs
src/handlers/user/: favorites.rs  mod.rs  orders.rs  products.rs  reviews.rs  users.rs
src/middleware/: auth.rs
tests/: e2e.rs  integration.rs  test_api.rs
