[package]
name = "pitza_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.0"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "numeric"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
actix-web-httpauth = "0.8"
futures-util = "0.3.31"
actix-cors = "0.6"

[dependencies.actix-service]
version = "2"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }